# SST

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  TASKS.md  main.py  pyproject.toml  scratch_stealth.py  scratch_test_playwright.py  scratch_test_vgmdb.py  setup.sh  test_cloudscraper.py
.github/: copilot-instructions.md
configs/: config.schema.json  example.yaml
design/: llm_node_design.md  storage_design.md  system_design.md  worker_design.md
docs/: SST.md
implementation/contracts/: api_contracts.md  error_model.md  interfaces.md
implementation/prompts/: codegen.md  review.md
implementation/tasks/llm/: normalization.md  validation.md
implementation/tasks/scout/: detect_soundtrack.md  scan_steam.md
implementation/tasks/worker/: acoustid.md  fetch_steam.md  musicbrainz_search.md  scoring.md  storage.md  tagging.md  vgmdb_search.md
specs/: SST.md
specs/data/: id3_mapping.md  metadata_schema.md  scoring_rules.md
specs/domain/: identification.md  pipeline.md  retry_policy.md  state_machine.md  tagging.md
specs/integrations/: acoustid.md  musicbrainz.md  steam_api.md  vgmdb.md
src/sst/contracts/: error_model.py  interfaces.py
src/sst/llm/: normalization.py  validation.py
src/sst/scout/: detect.py  scan.py
src/sst/utils/: steam_api.py  vdf_parser.py
src/sst/worker/: flow.py
src/sst/worker/tasks/: acoustid_fallback.py  apply_tags.py  convert_audio.py  metadata_musicbrainz.py  metadata_steam.py  (+3 more)
tests/: test_cases.md
tests/scout/: test_detect.py  test_error_model.py  test_scan.py
tests/worker/: test_scoring.py
