[project]
name = "sst"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bloom-filter>=1.3.3",
    "boto3>=1.42.89",
    "cloudscraper>=1.2.71",
    "ffmpeg-python>=0.2.0",
    "instructor>=1.15.1",
    "litellm>=1.83.0",
    "lxml>=6.0.4",
    "mutagen>=1.47.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "prefect>=3.6.26",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
